syntax = "proto3";

option go_package = "common/proto/profile_service";

package profile_service;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service ProfileService{
  rpc Get(GetRequest) returns (GetResponse){}

  rpc GetAll(EmptyRequest) returns (GetAllResponse){}
  
  rpc CreateProfile(CreateProfileRequest) returns(CreateProfileResponse){}

  rpc UpdateProfile(CreateProfileRequest) returns(CreateProfileResponse){}

  rpc UpdateProfileSkills(UpdateProfileSkillsRequest) returns(UpdateProfileSkillsResponse){}

  rpc SearchProfile(SearchProfileRequest) returns(GetAllResponse){

  }
}

message SearchProfileRequest{
  string param = 1;
}

message UpdateProfileSkillsResponse{
  int64 status = 1;
  string msg = 2;
}

message UpdateProfileSkillsRequest{
  string id = 1;
  repeated Skill skills = 2;
}


message GetAllResponse{
  repeated Profile profiles = 1;
}

message EmptyRequest{

}

message GetRequest{
  string id = 1;
}

message GetResponse{
  Profile profile = 1;
}

message Profile{
  string id = 1;
  string name = 2;
  string surname = 3;
  string username = 4;
  string email = 5;
  string biography = 6;
  string gender = 7;
  string phoneNumber = 8;
  google.protobuf.Timestamp birthDate = 9;
  bool isPrivate = 10;
  repeated Skill skills = 11;
  repeated Experience experiences = 12;
  bool isTwoFactor=13;
}

message Skill{
  string id = 1;
  string name = 2;
  string skillType = 3;
}


message Experience{
  string id = 1;
  string name = 2;
  string experienceType = 3;
  string description = 4;
  google.protobuf.Timestamp startDate = 5;
  google.protobuf.Timestamp endDate = 6;

}

message CreateProfileRequest{
  Profile profile = 1;
}

message CreateProfileResponse{
  Profile profile = 1;
}
